--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://database-1.ccbeoum2adzq.us-east-1.rds.amazonaws.com:3306/vaishnavi
+spring.datasource.url=jdbc:mysql://54.83.96.97:3306/vaishnavi
 spring.datasource.username=admin
 spring.datasource.password=vaishnavi123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
