--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://54.208.141.37:3306/vaishnavi
+spring.datasource.url=jdbc:mysql://database.ccbeoum2adzq.us-east-1.rds.amazonaws.com:3306/vaishnavi
 spring.datasource.username=admin
-spring.datasource.password=vaishnavi123
+spring.datasource.password=Vaishnavi123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifetime= 600000
 
